--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="Export/linux.x86_64"
+export_path="Export/masterserver_test_build.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
